--- a/css/style.css
+++ b/css/style.css
@@ -37,17 +37,17 @@ ul li {
     width: 900px;
     position: relative;
 }
-.list-table {
+.list_table {
     margin-top: 40px;
 }
-.list-table thead th{
+.list_table thead th{
     height:40px;
     border-top:2px solid #09C;
     border-bottom:1px solid #CCC;
     font-weight: bold;
     font-size: 17px;
 }
-.list-table tbody td{
+.list_table tbody td{
     text-align:center;
     padding:10px 0;
     border-bottom:1px solid #CCC; height:20px;
@@ -226,13 +226,13 @@ label {
     margin-top: 10px;
 }
 
-#page_num {
+.page_num {
     font-size: 14px;
-    margin-left: 200px;
+    margin-left: 250px;
     margin-top: 30px;
 }
 
-#page_num ul li {
+.page_num ul li {
     float: left;
     margin-left: 10px;
     text-align: center;
